# GitHubParser

./: MANIFEST.in  Makefile  README.md  __init__.py  config.ini  setup.cfg
src/gh_parser/: __init__.py  gh_parser.py
src/gh_parser/utils/: cli.py  endpoints.py  exceptions.py  parsers.py  type_hints.py  utils.py  wrappers.py
