[metadata]
name = gh_parser
version = 0.0.1
author = Yousef Abuzahrieh
author_email = yousefzahrieh17@gmail.com
description = A package for parsing GitHub API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yousefabuz17/GitHubParser
download_url = https://github.com/yousefabuz17/GitHubParser.git
platforms = Windows, Linux, MacOS
license = Apache Software License
python_requires = >=3.8
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities

[options]
packages = find:
package_dir =
    = src
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
gh_parser = 
    *.py

[options.entry_points]
console_scripts =
    gh-parser = gh_parser.utils.cli:cli_parser